[package]
name = "dummy"
version = "0.2.0"
description = "Example Zabbix loadable module written in Rust"
authors = ["Marin Atanasov Nikolov <dnaeon@gmail.com>", "Sebastian YEPES F. <syepes@gmail.com>"]

[lib]
name = "rust_dummy"
crate-type = ["dylib"]

[dependencies]
clippy = "*"
zbx = {path = 'C:\Users\syepesfernandez\Documents\00-Data\03-Personal\00-Devs\Zabbix\rust-zbx.syepes', version="*"}
rand = "*"
