[package]
name = "dummy"
version = "0.2.0"
description = "Example Zabbix loadable module written in Rust"
authors = ["Marin Atanasov Nikolov <dnaeon@gmail.com>", "Sebastian YEPES F. <syepes@gmail.com>"]

[lib]
name = "rust_dummy"
crate-type = ["dylib"]

[dependencies]
clippy = "*"
zbx = {git = "https://github.com/syepes/rust-zbx.git", version="*"}
rand = "*"
